Work With Data - fetchContactLimitViaApex 컴포넌트 생성

--- a/trailhead/force-app/main/default/classes/ContactManager.cls
+++ b/trailhead/force-app/main/default/classes/ContactManager.cls
@@ -8,4 +8,14 @@ public with sharing class ContactManager {
       LIMIT 20
     ];
   }
+
+  @AuraEnabled(cacheable=true)
+  public static List<Contact> getContactWithParm(Integer numberOfRecords) {
+    return [
+      SELECT Id, FirstName, LastName, Phone
+      FROM Contact
+      WITH SECURITY_ENFORCED
+      LIMIT :numberOfRecords
+    ];
+  }
 }
